<resources>
    <string name="app_name">AutoBike_V7</string>
    <string name="login_title">登入或註冊</string>
    <string name="use_e_mail">使用電子郵件註冊</string>
    <string name="login_login">已有帳戶?登入</string>
    <string name="login_later">稍後註冊</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="text_News">News</string>
    <string name="text_SpotList">Spot List</string>
    <string name="text_SpotDetail">Spot Details</string>
    <string name="text_SpotInsert">Insert Spot</string>
    <string name="text_SpotUpdate">Update Spot</string>
    <string name="text_SpotDelete">Delete Spot</string>

    <string name="col_Name">Name</string>
    <string name="col_PhoneNo">Phone No</string>
    <string name="col_Address">Address</string>

    <string name="msg_NoNewsFound">No news found</string>
    <string name="msg_NoSpotsFound">No spots found</string>
    <string name="msg_MapNotDisplayed">Map cannot be displayed</string>
    <string name="msg_ClickAgain">Please click the item again</string>
    <string name="msg_NoNetwork">no network connection available</string>
    <string name="msg_InsertSuccess">Insert successfully</string>
    <string name="msg_InsertFail">Insert fail</string>
    <string name="msg_UpdateSuccess">Update successfully</string>
    <string name="msg_UpdateFail">Update fail</string>
    <string name="msg_DeleteSuccess">Delete successfully</string>
    <string name="msg_DeleteFail">Delete fail</string>
    <string name="msg_NameIsInvalid">Spot name is invalid</string>
    <string name="msg_NoImage">No image</string>
    <string name="msg_NoDataFound">No data found</string>
    <string name="msg_NoCameraAppsFound">no camera apps found</string>

    <string name="text_Insert">Insert</string>
    <string name="text_Update">Update</string>
    <string name="text_Delete">Delete</string>
    <string name="text_SpotId">ID Number</string>
    <string name="text_SpotName">Name</string>
    <string name="text_btCancel">Cancel</string>
    <string name="text_TakePicture">Take Picture</string>
    <string name="text_PickPicture">Pick Picture</string>
    <string name="text_SpotPhone">Phone</string>
    <string name="text_SpotAddress">Address</string>
    <string name="text_NotGranted">not granted</string>
    <string name="text_Spot">Spot</string>
    <string name="text_Open">Open</string>
    <string name="text_Close">Close</string>
    <string name="text_Exit">Exit</string>
    <string name="msg_WantToExit">Do you really want to exit?</string>
    <string name="text_Yes">Yes</string>
    <string name="text_No">No</string>
    <string name="text_Motor">Motor</string>
    <string name="msg_NoMotorFound">no motor found</string>
    <string name="LoginTitle">會員登入</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="Login_normal">登入</string>
    <string name="registertitle">會員註冊</string>
    <string name="registerbutton">註冊</string>
    <string name="check_password_again">Check Password Again</string>
    <string name="sex">性別 :</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="ID">ID</string>
    <string name="registerMail">Mail</string>
    <string name="Address">Address</string>
    <string name="Birthday">Birthday</string>
    <string name="birthday">生日:</string>
    <string name="PhoneNumber">PhoneNumber</string>
    <string name="memdata_title">會員資料</string>
    <string name="memdata_memaccount">會員帳號 :</string>
    <string name="memdata_memname">會員名稱 :</string>
    <string name="memdate_Mail">會員信箱 :</string>
    <string name="memdata_Addr">會員地址 :</string>
    <string name="memdata_Sex">性別 :</string>
    <string name="memdate_Phone">會員電話 :</string>
    <string name="memdate_Birth">會員生日 :</string>
    <string name="rentdetail">租賃清單</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="cancelord">確定要取消訂單?</string>
    <string name="change_memdate">修改會員資料</string>
    <string name="MemStatus">認證狀態 :</string>
    <string name="canael">取消訂單</string>


</resources>
