<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fef934"
    tools:context="autobike.stanley.idv.android_autobike_v7.login.LoginNormalActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LoginTitle"
        android:id="@+id/tvLoginTitle"
        android:layout_marginTop="87dp"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/account"
        android:text="dudu"
        android:id="@+id/etAccount"
        android:inputType="text"
        android:maxLines="1"
        android:layout_below="@+id/tvLoginTitle"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:text="dudu"
        android:layout_marginTop="32dp"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_below="@+id/etAccount"
        android:layout_alignLeft="@+id/etAccount"
        android:layout_alignStart="@+id/etAccount" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_normal"
        android:id="@+id/btCheckLogin"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp" />



</RelativeLayout>
