<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5c927"
    android:orientation="vertical"
    tools:context="autobike.stanley.idv.android_autobike_v7.navigationlayout.Navi_Change_Member_Data">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_memdate"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="23dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="25dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memdate_Mail"
            android:textSize="20sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etChangeMail"
            android:hint="Mail"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="25dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memdata_Addr"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/etChangeAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Address"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="25dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memdate_Phone"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/etChangePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>


    <Button
        android:id="@+id/btn_memdatachangconfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="confirm"/>


</LinearLayout>
