<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5c927"
    tools:context="autobike.stanley.idv.android_autobike_v7.login.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:id="@+id/textView"
        android:layout_marginTop="87dp"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_e_mail"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="108dp"
        android:id="@+id/tvNormalRegister"
        android:textAlignment="center"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/login_login"
        android:layout_marginTop="26dp"
        android:id="@+id/tvNormalLogin"
        android:layout_below="@+id/tvNormalRegister"
        android:layout_centerHorizontal="true" />

    <!--<TextView-->
        <!--android:id="@+id/tvreg_later"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="20sp"-->
        <!--android:textStyle="bold"-->
        <!--android:text="@string/login_later"-->
        <!--android:layout_marginBottom="22dp"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_toRightOf="@+id/tvNormalRegister"-->
        <!--android:layout_toEndOf="@+id/tvNormalRegister" />-->

</RelativeLayout>
