<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="autobike.stanley.idv.android_autobike_v7.tab.boardmessage.Tab_BoardMessage_AddMessage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp" >

            <ImageView
                android:id="@+id/ivSpot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:src="@drawable/board" />

            <Button
                android:id="@+id/btPickPicture"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/btTakePicture"
                android:layout_toRightOf="@+id/btTakePicture"
                android:onClick="onPickPictureClick"
                android:text="@string/text_PickPicture" />

            <Button
                android:id="@+id/btTakePicture"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/ivSpot"
                android:layout_below="@+id/ivSpot"
                android:onClick="onTakePictureClick"
                android:text="@string/text_TakePicture" />
        </RelativeLayout>

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="Title"
            android:inputType="text"
            android:textColor="#0000FF" />


        <EditText
            android:id="@+id/etContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="Content"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:maxLines="5"
            android:textColor="#0000FF"
            android:layout_weight="39" />


        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp" >

            <Button
                android:id="@+id/btFinishInsert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/btCancel"
                android:onClick="onFinishInsertClick"
                android:text="@string/text_Insert" />

            <Button
                android:id="@+id/btCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btFinishInsert"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:onClick="onCancelClick"
                android:text="@string/text_btCancel" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
